added version info in html api view; fixed swagger warnings; removed redundant code